@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2001-2012, 2015-2017 Free Software Foundation, Inc.
+   Copyright (C) 2001-2012, 2015-2019 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch
 
    This file is part of GnuCOBOL.
