@@ -7,6 +7,8 @@
 	* common.h, call.c (cob_encode_program_id): extracted from
 	  cob_resolve_internal and added explicit check for the buffer
 	  size fixing bug #584; externalized for use by cobc
+	* common.h: new define COB_MAX_LITERAL_LEN, with currently 256k,
+	  used in cobc instead of previous LONG_MAX
 
 2019-07-14  Simon Sobisch <simonsobisch@gnu.org>
 
