@@ -10,6 +10,11 @@
 	* typeck.c: removed duplicated code for program-id encoding
 	  using libcob's new cob_encode_program_id with explicit check
 	  for buffer size fixing bug #584
+	* scanner.l (read_literal): fixed bug #583 buffer overflow
+	* cobc.c: PROGRAM-ID verification with explicit check for empty PROGRAM-ID
+	  and cut of PROGRAM-IDs that are too long in the error message
+	* config.def (cb_lit_length): changed internal maximum length of a literal
+	  from LONG_MAX to COB_MAX_LITERAL_LEN, a new define with currently 256k
 
 2019-08-14  Simon Sobisch <simonsobisch@gnu.org>
 
